[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "puck-build-manager" 
version = "0.1.0"
description = "A generic build manager for modular projects using conan and cmake"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Florian Giesemann", email = "fgiesemann@proton.me"},
]
keywords = ["conan", "cmake", "build", "project-management", "cxx", "puck"]
dependencies = [
    "dacite>=1.8.0",
]

[project.scripts]
puck = "puck_build.puck:main"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["puck_build"]
